gitops/services/base/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: creative-anchor
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  spec:
    ingressClassName: nginx
    rules:
      - http:
          paths:
            - path: /(.*)
              pathType: Prefix
              backend:
                service:
                  name: creative-anchor
                  port:
                    number: 80
